# dapr-a-to-z

./: README.md  pyproject.toml
examples/: master_app.py
modules/01-intro/: README.md
modules/01-intro/examples/: hello.py
modules/02-service-invocation/: README.md
modules/02-service-invocation/examples/: invoke.py
modules/03-state-management/: README.md
modules/03-state-management/examples/: state_ops.py
modules/04-pubsub/: README.md
modules/04-pubsub/examples/: publisher.py
modules/05-bindings/: README.md
modules/05-bindings/examples/: binding_out.py
modules/06-actors/: README.md
modules/06-actors/examples/: actor_client.py
modules/07-secrets/: README.md
modules/07-secrets/examples/: secrets_ops.py
modules/08-observability/: README.md
modules/08-observability/examples/: obs_demo.py
modules/09-advanced/: README.md
modules/09-advanced/examples/: advanced_ops.py
reference/: SDK_REFERENCE.md
